--- a/index.html
+++ b/index.html
@@ -17,14 +17,21 @@
     <section class="Cargos">
         <article class="comisionista">
             <h1><a href="./src/comisionistas/">
-                Comisionista
+                Dpto de Ventas
             </a> 
             </h1>
         </article>
         <article class="Administrativo">
             <h1>
-                <a href="./src/administrativo">
-                    Administrativo
+                <a href="./src/administrativo" >
+                    Dpto Administrativo
+                </a> 
+            </h1>
+        </article>
+        <article class="Produccion">
+            <h1>
+                <a href="./src/produccion/" >
+                    Dpto de Producción
                 </a> 
             </h1>
         </article>
