--- a/src/administrativo/index.html
+++ b/src/administrativo/index.html
@@ -19,7 +19,7 @@
             </a>
             <br>
             <br> -->
-            <a href="https://forms.gle/odGP3F1NaknouCWZ6" target="_blank">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScw1_Ktp0o3IFQGGd_3pFqWRBEfvVsnRjy1Xve726e67CdTbQ/viewform?usp=sf_link" target="_blank">
                 🚗🏍 Solicitud de movilización
             </a>
             <br>
