--- a/src/comisionistas/index.html
+++ b/src/comisionistas/index.html
@@ -27,10 +27,9 @@
             </a>
             </BR>
             </BR>
-            <a href="https://forms.gle/T1JSxbVnPwB8QWQZ7" target="_blank">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeKVqALPioQXHJhk7o63upRJjbNBI17gx1UDwo73inleb07dg/viewform?usp=sf_link" target="_blank">
                 🖌🖌 Solicitud de arte (DEMO/MUESTRA) 🎨🎨
             </a>
-
         </article>        
     </section>
 </body>
