--- a/src/comisionistas/index.html
+++ b/src/comisionistas/index.html
@@ -28,7 +28,7 @@
             </BR>
             </BR>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeKVqALPioQXHJhk7o63upRJjbNBI17gx1UDwo73inleb07dg/viewform?usp=sf_link" target="_blank">
-                🖌🖌 Solicitud de arte (DEMO/MUESTRA) 🎨🎨
+                🖌🖌 Solicitud de arte (DEMO/MUESTRAS) 🎨🎨
             </a>
         </article>        
     </section>
