--- a/src/administrativo/index.html
+++ b/src/administrativo/index.html
@@ -7,6 +7,15 @@
     <title>Dpto Administrativo</title>
 </head>
 
+<!-- 
+    Desarrollado por Franco Zabala
+  Mas informacion:
+      https://github.com/elpolituber
+      https://gitlab.com/elpolituber
+  Contacto:
+  franco-roko@outlook.com
+  Quito-Ecuador
+ -->
 <body>
     <a href="../../index.html">Regresar</a>
     <header>
