--- a/src/comisionistas/index.html
+++ b/src/comisionistas/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dpto de Ventas</title>
 </head>
+<!-- 
+    Desarrollado por Franco Zabala
+  Mas informacion:
+      https://github.com/elpolituber
+      https://gitlab.com/elpolituber
+  Contacto:
+  franco-roko@outlook.com
+  Quito-Ecuador
+ -->
 <body>
     <a href="../../index.html">Regresar</a>
     <header>
