--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Menu de gestionamiento</title>
     <link rel="stylesheet" href="./css/config.css">
 </head>
+<!-- 
+    Desarrollado por Franco Zabala
+  Mas informacion:
+      https://github.com/elpolituber
+      https://gitlab.com/elpolituber
+  Contacto:
+  franco-roko@outlook.com
+  Quito-Ecuador
+ -->
 <body>
     <header>
         <nav>
