--- a/src/administrativo/index.html
+++ b/src/administrativo/index.html
@@ -33,6 +33,7 @@
             </a>
             <br>
             <br>
+            
             <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSdzpzIemC_AdOhIbvDflejD_a9Jd2-9q3W9578u6tlTgRc0wQ/viewform?usp=sf_link">
                 🖌🖌 Solicitud de arte (ORDEN DE PEDIDO) 🎨🎨
             </a>
@@ -41,7 +42,9 @@
             <a href="https://forms.gle/T1JSxbVnPwB8QWQZ7">
                 🖌🖌 Solicitud de arte (DEMO/MUESTRA) 🎨🎨
             </a> -->
-
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScKePBqc5tBMasnBtiSbhsMpVDvHa3oKqm35pJPDtL_90jYMA/viewform?usp=sf_link" target="_blank">
+                📋📋 MEMORANDUM
+            </a>
         </article>
 </body>
 
