--- a/src/produccion/index.html
+++ b/src/produccion/index.html
@@ -47,6 +47,14 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLScKePBqc5tBMasnBtiSbhsMpVDvHa3oKqm35pJPDtL_90jYMA/viewform?usp=sf_link" target="_blank">
                 📋📋 MEMORANDUM
             </a>
+            <br><br>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdY_Ei0XcUYya0kZHeH2ZD1YGzjtCVpJO5IdBi5zPBWQvVZbg/viewform?usp=sf_link" target="_blank">
+                Solicitud para poder revisar MEMORANDUM
+            </a>
+            <br><br>
+            <a href="" target="_blank">
+                REVISAR MEMORANDUM
+            </a>
         </article>        
     </section>
 </body>
