agregacion de gerencia

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
                 </a> 
             </h1>
         </article>
+        <article class="Gerencia">
+            <h1>
+                <a href="./src/gerencia/" >
+                    Gerencia
+                </a> 
+            </h1>
+        </article>
     </section>
 </body>
 </html>
