--- a/src/gerencia/index.html
+++ b/src/gerencia/index.html
@@ -24,7 +24,7 @@
     </header>
     <section>
         <article>
-            <a href="https://docs.google.com/spreadsheets/d/15ogPkvZS2g7whuZ7KAMLez4V313ly7xuVy9xQdvmC4U/edit?resourcekey#gid=979931317">
+            <a href="https://docs.google.com/spreadsheets/d/15ogPkvZS2g7whuZ7KAMLez4V313ly7xuVy9xQdvmC4U/edit?resourcekey#gid=97993131710">
                🖌🎨 Solicitud de arte
             </a>
             <br>
@@ -56,6 +56,10 @@
             <br><br>
             <a href="https://docs.google.com/spreadsheets/d/1-Hxqjrs9OuBmYH4NKEN3kSe8cSHH88Z6Wlx_sasNWi4/edit?resourcekey#gid=661258802" target="_blank">
                 ORDEN DE PRODUCCION DE COSTURA
+            </a>
+            <br><br>
+            <a href="https://docs.google.com/spreadsheets/d/1YvWEupzsrBU7yxCpPoKNN7yfA5Y5hpKIRDM9G7WI0GE/edit?usp=drivesdk">
+                Formulario Prospectos pagina web
             </a>
         </article>
 </body>
