--- a/src/comisionistas/index.html
+++ b/src/comisionistas/index.html
@@ -53,7 +53,7 @@
             </a>
             <br><br>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzFFelXYtjD5o_oMgeQ-OCwMbBbj2ol9mXRdToa_-xr-efmg/viewform?usp=sf_link">
-                Formulario Prospectos pagina web
+                Formulario Prospectos de pagina web
             </a>
         </article>        
     </section>
