Aumento de formulario de reporte de horas extras

--- a/src/gerencia/index.html
+++ b/src/gerencia/index.html
@@ -61,6 +61,10 @@
             <a href="https://docs.google.com/spreadsheets/d/1YvWEupzsrBU7yxCpPoKNN7yfA5Y5hpKIRDM9G7WI0GE/edit?usp=drivesdk">
                 Formulario Prospectos pagina web
             </a>
+            <br><br>
+            <a href="https://docs.google.com/spreadsheets/d/1d9r5Io8pbwhyNgGh2DiRr0pPYZNubQ_UzzWQj_ocAGo/edit?resourcekey=&gid=2050644133#gid=2050644133">
+               ⏰⏰ Reporte horas extras ⏰⏰
+            </a>
         </article>
 </body>
 
