--- a/src/comisionistas/index.html
+++ b/src/comisionistas/index.html
@@ -55,6 +55,10 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzFFelXYtjD5o_oMgeQ-OCwMbBbj2ol9mXRdToa_-xr-efmg/viewform?usp=sf_link">
                 Formulario Prospectos de pagina web
             </a>
+            <br><br>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCPLGX5GMiJSEur099Ni5u1GYXtUMpXhnFMQZyoj5iD3tQLw/viewform?usp=sf_link">
+               ⏰⏰ Reporte horas extras ⏰⏰
+            </a>
         </article>        
     </section>
 </body>
