aunmento nfrtomulario de seguimiento

--- a/src/gerencia/index.html
+++ b/src/gerencia/index.html
@@ -65,6 +65,10 @@
             <a href="https://docs.google.com/spreadsheets/d/1d9r5Io8pbwhyNgGh2DiRr0pPYZNubQ_UzzWQj_ocAGo/edit?resourcekey=&gid=2050644133#gid=2050644133">
                ⏰⏰ Reporte horas extras ⏰⏰
             </a>
+            <br><br>
+            <a href="https://docs.google.com/spreadsheets/d/1hf9sjR9TNxOE2RxNC4Lt8zOpS1LME46sWJzhNEhly7Y/edit?resourcekey=&gid=1616036262#gid=1616036262">
+                Formulario de Seguimiento
+            </a>
         </article>
 </body>
 
