--- a/src/gerencia/index.html
+++ b/src/gerencia/index.html
@@ -69,6 +69,10 @@
             <a href="https://docs.google.com/spreadsheets/d/1hf9sjR9TNxOE2RxNC4Lt8zOpS1LME46sWJzhNEhly7Y/edit?resourcekey=&gid=1616036262#gid=1616036262">
                 Formulario de Seguimiento
             </a>
+            <br><br>
+            <a href="https://docs.google.com/spreadsheets/d/1DOgDs64tBiwxRlrDZNXP-YFT7Qf6ttn3BAM32MTPJyc/edit?resourcekey=&gid=1147197850#gid=1147197850">
+               Solicitud de Tareas Pendientes
+            </a>
         </article>
 </body>
 
