--- a/src/gerencia/index.html
+++ b/src/gerencia/index.html
@@ -20,7 +20,7 @@
     <a href="../../index.html">Regresar</a>
     <header>
         <h1>Dpto Gerencia</h1>
-        <h2>Aqui estan los informes para recvisar</h2>
+        <h2>Aqui estan los informes para revisar</h2>
     </header>
     <section>
         <article>
@@ -71,7 +71,7 @@
             </a>
             <br><br>
             <a href="https://docs.google.com/spreadsheets/d/1DOgDs64tBiwxRlrDZNXP-YFT7Qf6ttn3BAM32MTPJyc/edit?resourcekey=&gid=1147197850#gid=1147197850">
-               Solicitud de Tareas Pendientes
+              Reporte de  Solicitud de Tareas Pendientes
             </a>
         </article>
 </body>
