--- a/src/administrativo/index.html
+++ b/src/administrativo/index.html
@@ -57,6 +57,9 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCPLGX5GMiJSEur099Ni5u1GYXtUMpXhnFMQZyoj5iD3tQLw/viewform?usp=sf_link">
                ⏰⏰ Reporte horas extras ⏰⏰
             </a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSemKF_SUoxRsgBxe2rzQR9hi2tglp2dE_8AGep9a4Lm-G746w/viewform?usp=sf_link">
+                Solicitud de Tareas Pendientes
+              </a>
         </article>
 </body>
 
