--- a/src/administrativo/index.html
+++ b/src/administrativo/index.html
@@ -60,6 +60,10 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSemKF_SUoxRsgBxe2rzQR9hi2tglp2dE_8AGep9a4Lm-G746w/viewform?usp=sf_link">
                 Solicitud de Tareas Pendientes
               </a>
+              <br><br>
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSdh1GyHpC90eCQYPa8GX3lVE9v5AtEWd9F6ghdTy_5bVUmVzg/viewform?usp=sf_link">
+                ➕➕ Solicitud de documentos contables  ➕➕
+              </a>
         </article>
 </body>
 
