--- a/src/gerencia/index.html
+++ b/src/gerencia/index.html
@@ -73,6 +73,10 @@
             <a href="https://docs.google.com/spreadsheets/d/1DOgDs64tBiwxRlrDZNXP-YFT7Qf6ttn3BAM32MTPJyc/edit?resourcekey=&gid=1147197850#gid=1147197850">
               Reporte de  Solicitud de Tareas Pendientes
             </a>
+            <br><br>
+            <a href="https://docs.google.com/spreadsheets/d/1RWhJI1pBhbeCOGPJE5Q9FCReGOWi31KsFBv3QHafIxE/edit?resourcekey=&gid=79644206#gid=79644206">
+                ➕➕ Roporte de documentos contables  ➕➕
+              </a>
         </article>
 </body>
 
