Atencion al cliente

--- a/src/comisionistas/index.html
+++ b/src/comisionistas/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
   franco-roko@outlook.com
   Quito-Ecuador
  -->
+
 <body>
     <a href="../../index.html">Regresar</a>
     <header>
@@ -26,48 +28,63 @@
             </a>
             <br>
             <br>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScw1_Ktp0o3IFQGGd_3pFqWRBEfvVsnRjy1Xve726e67CdTbQ/viewform?usp=sf_link" target="_blank">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScw1_Ktp0o3IFQGGd_3pFqWRBEfvVsnRjy1Xve726e67CdTbQ/viewform?usp=sf_link"
+                target="_blank">
                 🚗🏍 Solicitud de movilización
             </a>
             <br>
             <br>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdzpzIemC_AdOhIbvDflejD_a9Jd2-9q3W9578u6tlTgRc0wQ/viewform?usp=sf_link" target="_blank">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdzpzIemC_AdOhIbvDflejD_a9Jd2-9q3W9578u6tlTgRc0wQ/viewform?usp=sf_link"
+                target="_blank">
                 🖌🖌 Solicitud de arte (ORDEN DE PEDIDO) 🎨🎨
             </a>
             </BR>
             </BR>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeKVqALPioQXHJhk7o63upRJjbNBI17gx1UDwo73inleb07dg/viewform?usp=sf_link" target="_blank">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeKVqALPioQXHJhk7o63upRJjbNBI17gx1UDwo73inleb07dg/viewform?usp=sf_link"
+                target="_blank">
                 🖌🖌 Solicitud de arte (DEMO/MUESTRAS) 🎨🎨
             </a>
             <br><br>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScKePBqc5tBMasnBtiSbhsMpVDvHa3oKqm35pJPDtL_90jYMA/viewform?usp=sf_link" target="_blank">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScKePBqc5tBMasnBtiSbhsMpVDvHa3oKqm35pJPDtL_90jYMA/viewform?usp=sf_link"
+                target="_blank">
                 📋📋 MEMORANDUM
             </a>
             <br><br>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdY_Ei0XcUYya0kZHeH2ZD1YGzjtCVpJO5IdBi5zPBWQvVZbg/viewform?usp=sf_link" target="_blank">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdY_Ei0XcUYya0kZHeH2ZD1YGzjtCVpJO5IdBi5zPBWQvVZbg/viewform?usp=sf_link"
+                target="_blank">
                 Solicitud para poder revisar MEMORANDUM
             </a>
             <br><br>
-            <a href="https://docs.google.com/spreadsheets/d/1KOvoMOAYTCPmgrlFGSwu03NR5mwYh6Xy2RheyVYnnjE/edit?usp=sharing" target="_blank">
+            <a href="https://docs.google.com/spreadsheets/d/1KOvoMOAYTCPmgrlFGSwu03NR5mwYh6Xy2RheyVYnnjE/edit?usp=sharing"
+                target="_blank">
                 REVISAR MEMORANDUM
             </a>
             <br><br>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzFFelXYtjD5o_oMgeQ-OCwMbBbj2ol9mXRdToa_-xr-efmg/viewform?usp=sf_link">
+            <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSfzFFelXYtjD5o_oMgeQ-OCwMbBbj2ol9mXRdToa_-xr-efmg/viewform?usp=sf_link">
                 Formulario Prospectos de pagina web
             </a>
             <br><br>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCPLGX5GMiJSEur099Ni5u1GYXtUMpXhnFMQZyoj5iD3tQLw/viewform?usp=sf_link">
-               ⏰⏰ Reporte horas extras ⏰⏰
+            <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSfCPLGX5GMiJSEur099Ni5u1GYXtUMpXhnFMQZyoj5iD3tQLw/viewform?usp=sf_link">
+                ⏰⏰ Reporte horas extras ⏰⏰
             </a>
             <br><br>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSemKF_SUoxRsgBxe2rzQR9hi2tglp2dE_8AGep9a4Lm-G746w/viewform?usp=sf_link">
+            <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSemKF_SUoxRsgBxe2rzQR9hi2tglp2dE_8AGep9a4Lm-G746w/viewform?usp=sf_link">
                 Solicitud de Tareas Pendientes
             </a>
             <br><br>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdh1GyHpC90eCQYPa8GX3lVE9v5AtEWd9F6ghdTy_5bVUmVzg/viewform?usp=sf_link">
-                ➕➕ Solicitud de documentos contables  ➕➕
-              </a>
-        </article>        
+            <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSdh1GyHpC90eCQYPa8GX3lVE9v5AtEWd9F6ghdTy_5bVUmVzg/viewform?usp=sf_link">
+                ➕➕ Solicitud de documentos contables ➕➕
+            </a>
+            <br><br>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd1rARsO50ScDx8vfiViX4S88zrA7xuJ2JkZL1mtlVtuFlPQQ/viewform?usp=sf_link">
+                Encuesta atencion al cliente 🗣🗣
+            </a>
+        </article>
     </section>
 </body>
+
 </html>
