--- a/src/gerencia/index.html
+++ b/src/gerencia/index.html
@@ -16,6 +16,7 @@
   franco-roko@outlook.com
   Quito-Ecuador
  -->
+
 <body>
     <a href="../../index.html">Regresar</a>
     <header>
@@ -24,59 +25,77 @@
     </header>
     <section>
         <article>
-            <a href="https://docs.google.com/spreadsheets/d/15ogPkvZS2g7whuZ7KAMLez4V313ly7xuVy9xQdvmC4U/edit?resourcekey#gid=97993131710">
-               🖌🎨 Solicitud de arte
+            <a
+                href="https://docs.google.com/spreadsheets/d/15ogPkvZS2g7whuZ7KAMLez4V313ly7xuVy9xQdvmC4U/edit?resourcekey#gid=97993131710">
+                🖌🎨 Solicitud de arte
             </a>
             <br>
             <br>
-            <a href="https://docs.google.com/spreadsheets/d/1gIQ1kAHfrncOWbbkkOTxQDy0TWDNeyfyM5QWfeLFpu0/edit?resourcekey#gid=1179805826" target="_blank">
+            <a href="https://docs.google.com/spreadsheets/d/1gIQ1kAHfrncOWbbkkOTxQDy0TWDNeyfyM5QWfeLFpu0/edit?resourcekey#gid=1179805826"
+                target="_blank">
                 🚗🏍 Solicitud de movilización
             </a>
             <br>
-            <br> 
-            <a href="https://docs.google.com/spreadsheets/d/1ECMDpsyEn5hYSE7sSco1URk2uIjvTlcsJo8UjrLsW_c/edit?resourcekey#gid=198752379">
+            <br>
+            <a
+                href="https://docs.google.com/spreadsheets/d/1ECMDpsyEn5hYSE7sSco1URk2uIjvTlcsJo8UjrLsW_c/edit?resourcekey#gid=198752379">
                 🖌🖌 Solicitud de arte (DEMO/MUESTRA) 🎨🎨
             </a>
             <br><br>
-            <a href="https://docs.google.com/spreadsheets/d/1KOvoMOAYTCPmgrlFGSwu03NR5mwYh6Xy2RheyVYnnjE/edit?resourcekey#gid=714198169" target="_blank">
+            <a href="https://docs.google.com/spreadsheets/d/1KOvoMOAYTCPmgrlFGSwu03NR5mwYh6Xy2RheyVYnnjE/edit?resourcekey#gid=714198169"
+                target="_blank">
                 📋📋 MEMORANDUM
             </a>
             <br><br>
-            <a href="https://docs.google.com/spreadsheets/d/1FtXfeD-1yT30QOJ3M8KF9bdao4YSeWBpoXvss4YydBk/edit?resourcekey#gid=1119064624" target="_blank">
+            <a href="https://docs.google.com/spreadsheets/d/1FtXfeD-1yT30QOJ3M8KF9bdao4YSeWBpoXvss4YydBk/edit?resourcekey#gid=1119064624"
+                target="_blank">
                 ORDEN DE PRODUCCION DE IMPRESIÓN
             </a>
             <br><br>
-            <a href="https://docs.google.com/spreadsheets/d/1MosJwcMaaBuT4YlaYUfGewqy2y1rcYoPTtrpiet7a0s/edit?resourcekey#gid=182139988" target="_blank">
+            <a href="https://docs.google.com/spreadsheets/d/1MosJwcMaaBuT4YlaYUfGewqy2y1rcYoPTtrpiet7a0s/edit?resourcekey#gid=182139988"
+                target="_blank">
                 ORDEN DE PRODUCCION DE EMPAQUE
             </a>
             <br><br>
-            <a href="https://docs.google.com/spreadsheets/d/1jLz6hgax1JjCI_5XEHMLLvNVb8ERct71F39G6ACJZVo/edit?resourcekey#gid=2139562491" target="_blank">
+            <a href="https://docs.google.com/spreadsheets/d/1jLz6hgax1JjCI_5XEHMLLvNVb8ERct71F39G6ACJZVo/edit?resourcekey#gid=2139562491"
+                target="_blank">
                 ORDEN DE PRODUCCION DE CORTE
             </a>
             <br><br>
-            <a href="https://docs.google.com/spreadsheets/d/1-Hxqjrs9OuBmYH4NKEN3kSe8cSHH88Z6Wlx_sasNWi4/edit?resourcekey#gid=661258802" target="_blank">
+            <a href="https://docs.google.com/spreadsheets/d/1-Hxqjrs9OuBmYH4NKEN3kSe8cSHH88Z6Wlx_sasNWi4/edit?resourcekey#gid=661258802"
+                target="_blank">
                 ORDEN DE PRODUCCION DE COSTURA
             </a>
             <br><br>
-            <a href="https://docs.google.com/spreadsheets/d/1YvWEupzsrBU7yxCpPoKNN7yfA5Y5hpKIRDM9G7WI0GE/edit?usp=drivesdk">
+            <a
+                href="https://docs.google.com/spreadsheets/d/1YvWEupzsrBU7yxCpPoKNN7yfA5Y5hpKIRDM9G7WI0GE/edit?usp=drivesdk">
                 Formulario Prospectos pagina web
             </a>
             <br><br>
-            <a href="https://docs.google.com/spreadsheets/d/1d9r5Io8pbwhyNgGh2DiRr0pPYZNubQ_UzzWQj_ocAGo/edit?resourcekey=&gid=2050644133#gid=2050644133">
-               ⏰⏰ Reporte horas extras ⏰⏰
+            <a
+                href="https://docs.google.com/spreadsheets/d/1d9r5Io8pbwhyNgGh2DiRr0pPYZNubQ_UzzWQj_ocAGo/edit?resourcekey=&gid=2050644133#gid=2050644133">
+                ⏰⏰ Reporte horas extras ⏰⏰
             </a>
             <br><br>
-            <a href="https://docs.google.com/spreadsheets/d/1hf9sjR9TNxOE2RxNC4Lt8zOpS1LME46sWJzhNEhly7Y/edit?resourcekey=&gid=1616036262#gid=1616036262">
+            <a
+                href="https://docs.google.com/spreadsheets/d/1hf9sjR9TNxOE2RxNC4Lt8zOpS1LME46sWJzhNEhly7Y/edit?resourcekey=&gid=1616036262#gid=1616036262">
                 Formulario de Seguimiento
             </a>
             <br><br>
-            <a href="https://docs.google.com/spreadsheets/d/1DOgDs64tBiwxRlrDZNXP-YFT7Qf6ttn3BAM32MTPJyc/edit?resourcekey=&gid=1147197850#gid=1147197850">
-              Reporte de  Solicitud de Tareas Pendientes
+            <a
+                href="https://docs.google.com/spreadsheets/d/1DOgDs64tBiwxRlrDZNXP-YFT7Qf6ttn3BAM32MTPJyc/edit?resourcekey=&gid=1147197850#gid=1147197850">
+                Reporte de Solicitud de Tareas Pendientes
             </a>
             <br><br>
-            <a href="https://docs.google.com/spreadsheets/d/1RWhJI1pBhbeCOGPJE5Q9FCReGOWi31KsFBv3QHafIxE/edit?resourcekey=&gid=79644206#gid=79644206">
-                ➕➕ Roporte de documentos contables  ➕➕
-              </a>
+            <a
+                href="https://docs.google.com/spreadsheets/d/1RWhJI1pBhbeCOGPJE5Q9FCReGOWi31KsFBv3QHafIxE/edit?resourcekey=&gid=79644206#gid=79644206">
+                ➕➕ Roporte de documentos contables ➕➕
+            </a>
+            <br><br>
+            <a
+                href="https://docs.google.com/spreadsheets/d/1vH2FkoSApPELvSRGDPj8Y51AqcKmA4YW7IK1T6IBK7s/edit?resourcekey=&gid=292010027#gid=292010027">
+                Roporte encuesta atencion al cliente 🗣🗣
+            </a>
         </article>
 </body>
 
