--- a/src/gerencia/index.html
+++ b/src/gerencia/index.html
@@ -96,6 +96,11 @@
                 href="https://docs.google.com/spreadsheets/d/1vH2FkoSApPELvSRGDPj8Y51AqcKmA4YW7IK1T6IBK7s/edit?resourcekey=&gid=292010027#gid=292010027">
                 Roporte encuesta atencion al cliente 🗣🗣
             </a>
+            <br><br>
+            <a
+                href="https://docs.google.com/spreadsheets/d/1Pk2qGw0txDwbZECpyLjJ7RSQuygIm68FhFt_oAZ2n5w/edit?resourcekey=&gid=444580886#gid=444580886">
+                Reporte Seguimiento Diario de Clientes 👁👁👁‍🗨👁‍🗨
+            </a>
         </article>
 </body>
 
