cambior del menu de gestionamiento

--- a/src/administrativo/index.html
+++ b/src/administrativo/index.html
@@ -62,9 +62,9 @@
                 Solicitud de Tareas Pendientes
               </a>
               <br><br>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSdh1GyHpC90eCQYPa8GX3lVE9v5AtEWd9F6ghdTy_5bVUmVzg/viewform?usp=sf_link">
+              <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSdh1GyHpC90eCQYPa8GX3lVE9v5AtEWd9F6ghdTy_5bVUmVzg/viewform?usp=sf_link">
                 ➕➕ Solicitud de documentos contables  ➕➕
-              </a>
+              </a> -->
         </article>
 </body>
 
