--- a/src/produccion/index.html
+++ b/src/produccion/index.html
@@ -21,7 +21,7 @@
     </header>
     <section>
         <article>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc3lZppe4naPvejbqFHG9eNfysHlj8RSUkkg-1W0cVNkFq0PA/viewform?usp=sf_link" target="_blank">
+            <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSc3lZppe4naPvejbqFHG9eNfysHlj8RSUkkg-1W0cVNkFq0PA/viewform?usp=sf_link" target="_blank">
                 🧵🧵 ORDEN DE PRODUCCION DE COSTURA
             </a>
             <br>
@@ -39,7 +39,7 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaE6FklCXGTb5xv2n_e-A1JHrpo1IJt5Gq6rG9P3Jrc_8WMg/viewform?usp=sf_link" target="_blank">
                 📦📦 ORDEN DE PRODUCCION DE EMPAQUE
             </a>
-            <br><br>
+            <br><br> -->
             <a href="https://docs.google.com/forms/d/e/1FAIpQLScw1_Ktp0o3IFQGGd_3pFqWRBEfvVsnRjy1Xve726e67CdTbQ/viewform?usp=sf_link" target="_blank">
                 🚗🏍 Solicitud de movilización
             </a>
@@ -47,14 +47,14 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLScKePBqc5tBMasnBtiSbhsMpVDvHa3oKqm35pJPDtL_90jYMA/viewform?usp=sf_link" target="_blank">
                 📋📋 MEMORANDUM
             </a>
-            <br><br>
+            <!-- <br><br>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdY_Ei0XcUYya0kZHeH2ZD1YGzjtCVpJO5IdBi5zPBWQvVZbg/viewform?usp=sf_link" target="_blank">
                 Solicitud para poder revisar MEMORANDUM
-            </a>
-            <br><br>
+            </a> -->
+            <!-- <br><br>
             <a href="https://docs.google.com/spreadsheets/d/1KOvoMOAYTCPmgrlFGSwu03NR5mwYh6Xy2RheyVYnnjE/edit?usp=sharing" target="_blank">
                 REVISAR MEMORANDUM
-            </a>
+            </a> -->
             <br><br>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCPLGX5GMiJSEur099Ni5u1GYXtUMpXhnFMQZyoj5iD3tQLw/viewform?usp=sf_link">
                ⏰⏰ Reporte horas extras ⏰⏰
