--- a/src/comisionistas/index.html
+++ b/src/comisionistas/index.html
@@ -86,7 +86,12 @@
             <br><br>
             <a
                 href="https://docs.google.com/forms/d/e/1FAIpQLSd889QU1p7P7MlW30NjfwXJRnHCXPejqr1b_5S0hn7Mr2eHAQ/viewform?usp=sf_link">
-                Seguimiento Diario de Clientes 👁👁👁‍🗨👁‍🗨
+                Seguimiento Diario de Clientes Vendedor Senior 👁👁👁‍🗨👁‍🗨
+            </a>
+            <br><br>
+            <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSfECP7kDrcJGy7U9_fUCiYdf8rj4aOoji1VQjMu-V9y0Nx_QQ/viewform?usp=dialog">
+                Seguimiento Diario de Clientes Call Center 👁👁👁‍🗨👁‍🗨
             </a>
         </article>
     </section>
