--- a/src/gerencia/index.html
+++ b/src/gerencia/index.html
@@ -99,7 +99,12 @@
             <br><br>
             <a
                 href="https://docs.google.com/spreadsheets/d/1Pk2qGw0txDwbZECpyLjJ7RSQuygIm68FhFt_oAZ2n5w/edit?resourcekey=&gid=444580886#gid=444580886">
-                Reporte Seguimiento Diario de Clientes 👁👁👁‍🗨👁‍🗨
+                Reporte Seguimiento Diario de Clientes Vendedor Senior 👁👁👁‍🗨👁‍🗨
+            </a>
+            <br><br>
+            <a
+                href="https://docs.google.com/spreadsheets/d/1MSR8QcW-Qn_2WZoq2kQFFJGMgwtO-VSVTovk-SEkags/edit?resourcekey=&gid=837594571#gid=837594571">
+                Reporte Seguimiento Diario de Clientes De call Center👁👁👁‍🗨👁‍🗨
             </a>
         </article>
 </body>
