--- a/src/comisionistas/index.html
+++ b/src/comisionistas/index.html
@@ -93,6 +93,11 @@
                 href="https://docs.google.com/forms/d/e/1FAIpQLSfECP7kDrcJGy7U9_fUCiYdf8rj4aOoji1VQjMu-V9y0Nx_QQ/viewform?usp=dialog">
                 Seguimiento Diario de Clientes Call Center 👁👁👁‍🗨👁‍🗨
             </a>
+            <br><br>
+            <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSfDrDryqGuR4PhTUEdlg7vG88NpAbTcos8b82_c8j22YgYtNg/viewform?usp=dialog">
+                Registro de Requerimiento  👁👁👁‍🗨👁‍🗨
+            </a>
         </article>
     </section>
 </body>
