--- a/src/gerencia/index.html
+++ b/src/gerencia/index.html
@@ -106,6 +106,11 @@
                 href="https://docs.google.com/spreadsheets/d/1MSR8QcW-Qn_2WZoq2kQFFJGMgwtO-VSVTovk-SEkags/edit?resourcekey=&gid=837594571#gid=837594571">
                 Reporte Seguimiento Diario de Clientes De call Center👁👁👁‍🗨👁‍🗨
             </a>
+            <br><br>
+            <a
+                href="https://docs.google.com/spreadsheets/d/1b3MloUpZSd1ji9-fbYH997Cscrl34eBc9GThZDjNS8E/edit?resourcekey=&gid=1534905631#gid=1534905631">
+                Registro de Requerimiento 
+            </a>
         </article>
 </body>
 
