--- a/src/administrativo/index.html
+++ b/src/administrativo/index.html
@@ -62,6 +62,11 @@
                 Solicitud de Tareas Pendientes
               </a>
               <br><br>
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSeKVqALPioQXHJhk7o63upRJjbNBI17gx1UDwo73inleb07dg/viewform?usp=sf_link"
+                target="_blank">
+                🖌🖌 Solicitud de arte (DEMO/MUESTRAS) 💵💵 
+            </a>
+            <br><br>
               <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSdh1GyHpC90eCQYPa8GX3lVE9v5AtEWd9F6ghdTy_5bVUmVzg/viewform?usp=sf_link">
                 ➕➕ Solicitud de documentos contables  ➕➕
               </a> -->
