--- a/src/gerencia/index.html
+++ b/src/gerencia/index.html
@@ -38,8 +38,8 @@
             <br>
             <br>
             <a
-                href="https://docs.google.com/spreadsheets/d/1ECMDpsyEn5hYSE7sSco1URk2uIjvTlcsJo8UjrLsW_c/edit?resourcekey#gid=198752379">
-                🖌🖌 Solicitud de arte (DEMO/MUESTRA) 🎨🎨
+                href="https://docs.google.com/spreadsheets/d/1IkIgrw-eJxwRDepDHpByfCezReVdypI_0i464L4f23A/edit?usp=sharing">
+                🖌🖌 Solicitud de arte (DEMO/MUESTRA) 💵💵
             </a>
             <br><br>
             <a href="https://docs.google.com/spreadsheets/d/1KOvoMOAYTCPmgrlFGSwu03NR5mwYh6Xy2RheyVYnnjE/edit?resourcekey#gid=714198169"
