--- a/src/comisionistas/index.html
+++ b/src/comisionistas/index.html
@@ -48,7 +48,7 @@
             <br>
             <br>
             <a
-                href="https://docs.google.com/spreadsheets/d/1IkIgrw-eJxwRDepDHpByfCezReVdypI_0i464L4f23A/edit?usp=sharing">
+                href="https://docs.google.com/forms/d/e/1FAIpQLSeKVqALPioQXHJhk7o63upRJjbNBI17gx1UDwo73inleb07dg/viewform?usp=sf_link">
                 🖌🖌 Solicitud de arte (DEMO/MUESTRA) 💵💵
             </a>
             <br><br>
